add none as home to widgets module

--- a/module/widgets/pubspec.yaml
+++ b/module/widgets/pubspec.yaml
@@ -1,7 +1,7 @@
 name: widgets
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: "none"
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
