--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,17 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.3
+  easy_logger: ^0.0.2
+  logger: ^2.0.2+1
+  envied: ^0.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  envied_generator: ^0.5.2
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
