--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,21 +14,21 @@ dependencies:
 
   widgets:
     path: module/widgets
+  gen:
+    path: module/gen
 
 
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.3
   easy_logger: ^0.0.2
   logger: ^2.0.2+1
-  envied: ^0.5.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  envied_generator: ^0.5.2
-  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
