--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ dependencies:
   easy_logger: ^0.0.2
   logger: ^2.0.2+1
   flutter_svg: ^2.0.9
+  auto_route: ^7.8.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  auto_route_generator: ^7.3.2
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
