--- a/module/gen/pubspec.yaml
+++ b/module/gen/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   envied: ^0.5.2
-
+  vexana: ^3.5.4
 
 dev_dependencies:
   flutter_test:
