--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   logger: ^2.0.2+1
   flutter_svg: ^2.0.9
   auto_route: ^7.8.4
+  vexana: ^3.5.4
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
