--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,14 @@ dependencies:
   auto_route: ^7.8.4
   vexana: ^3.5.4
   get_it: ^7.6.4
+  flutter_bloc: ^8.1.3
+  hive: ^2.2.3
+  provider: ^6.1.1
+  path_provider: ^2.1.1
+  http: ^1.1.0
+  cached_network_image: ^3.3.0
+  kartal: ^3.5.0
+  draggable_menu: "4.4.0"
 
 dev_dependencies:
   flutter_test:
